# cabs

./: .gitattributes  .gitignore  LICENSE  README.md  model_usage.py  pyproject.toml  requirements-training.txt  requirements_dataconcept.txt
data/: vocabulary_descriptions.json
dataconcept/: vocabulary_cleanup.py
dataconcept/captioning/: analysis.py  dataset.py  recap.py  tardataset.py  utils.py
dataconcept/detection/: README.md  ensemble_boxes.py  groundingdino_helpers.py  run_rampp_only.py  tardataset.py  utils.py  wbf.py
dataconcept/detection/ram/: inference.py
dataconcept/detection/ram/models/: ram_plus.py
dataconcept/detection/ram/utils/: __init__.py  openset_utils.py
extra/: clean_vocabulary.py  push_model.py  vocabulary_keys.txt
scripts/cabs-dm/: vitb16_siglip_256_alt_0.8.sh  vitb16_siglip_256_recap_0.8.sh  vitb32_alt_0.8.sh  vitb32_recap_0.8.sh
scripts/cabs-fm/: vitb16_siglip_256_alt_0.8.sh  vitb16_siglip_256_recap_0.8.sh  vitb32_alt_0.8.sh  vitb32_recap_0.8.sh
src/open_clip_train/: data.py  distributed.py  diversity_maximisation.py  file_utils.py  main.py  params.py  sampling.py  train.py  utils.py
